update header changes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <div class="navbar-inside m-auto">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="/">Product</a>
+                    <a class="nav-link " href="/">Product</a>
                     <div class="MegaMenu" aria-hidden="true">
                       <div class="MegaMenu__Inner">
                         <div class="MegaMenu__Item MegaMenu__Item--fit">
@@ -262,7 +262,7 @@
         </div>
       </nav>
     </header>
-    <div id="shop-detail" class="desktop-content bg-dark-color">
+    <div id="shop-detail" class="desktop-content ">
       <div class="container">
       <div class="boxDefault-content">
         <div class="parsys_column-content">
