--- a/shoplook.html
+++ b/shoplook.html
@@ -79,7 +79,150 @@
               <div class="navbar-inside m-auto">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="/">Product</a>
+                    <a class="nav-link " href="/">Product</a>
+                    <div class="MegaMenu" aria-hidden="true">
+                      <div class="MegaMenu__Inner">
+                        <div class="MegaMenu__Item MegaMenu__Item--fit">
+                          <a
+                            href="#"
+                            class="MegaMenu__Title Heading Text--subdued u-h7"
+                          >
+                            COLLECTIONS
+                          </a>
+                          <ul class="Linklist">
+                            <li class="Linklist__Item">
+                              <a href="/sofa.html" class="Link Link--secondary"
+                                >Sofa's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/armchair.html" class="Link Link--secondary"
+                                >Armchair's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/Officeswivelchairs.html" class="Link Link--secondary"
+                                >Office Swivel Chair's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/bedstool.html" class="Link Link--secondary"
+                                >Bed Stool's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/pouf.html" class="Link Link--secondary"
+                                >Pouf's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/chair.html" class="Link Link--secondary"
+                                >Chair's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/barchair.html" class="Link Link--secondary"
+                                >Bar Chair</a
+                              >
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="MegaMenu__Item MegaMenu__Item--fit">
+                          <a
+                            href="#"
+                            class="MegaMenu__Title Heading Text--subdued u-h7"
+                          >
+                          
+                          </a>
+                         
+                          <ul class="Linklist mt-5">
+                            <li class="Linklist__Item">
+                              <a href="/modularcabinet.html" class="Link Link--secondary"
+                                >Modular Cabinet's</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/coffeetable.html" class="Link Link--secondary"
+                                >Coffee Tables</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/beds.html" class="Link Link--secondary">Bed's</a>
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/sideboards.html" class="Link Link--secondary"
+                                >Sideboards</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/bedsidecabinet.html" class="Link Link--secondary"
+                                >Bedside cabinet</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/diningtables.html" class="Link Link--secondary"
+                                >Dining Tables</a
+                              >
+                            </li>
+                            <li class="Linklist__Item">
+                              <a href="/desk.html" class="Link Link--secondary">Desks</a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div
+                          class="MegaMenu__Item MegaMenu_collection"
+                          style="width: 660px; min-width: 425px"
+                        >
+                          <div class="MegaMenu__Push MegaMenu__Push--shrink">
+                            <a class="MegaMenu__PushLink" href="/">
+                              <div
+                                class="MegaMenu__PushImageWrapper AspectRatio"
+                                style="
+                                  background: url(include/images/explore/J.jpg);
+                                  max-width: 370px;
+                                  --aspect-ratio: 1.405152224824356;
+                                "
+                              >
+                                <img
+                                  class="Image--fadeIn Image--lazyLoaded"
+                                  data-src="//addresshome.com/cdn/shop/files/Nav_Banner1_370x230@2x.jpg?v=1664542403"
+                                  alt=""
+                                  src="include/images/explore/J.jpg"
+                                />
+
+                                <span class="Image__Loader"></span>
+                              </div>
+                              <p class="MegaMenu__PushHeading Heading u-h6">
+                                SOFA
+                              </p>
+                            </a>
+                          </div>
+                          <div class="MegaMenu__Push MegaMenu__Push--shrink">
+                            <a class="MegaMenu__PushLink" href="/">
+                              <div
+                                class="MegaMenu__PushImageWrapper AspectRatio"
+                                style="
+                                  background: url(include/images/explore/H.jpg);
+                                  max-width: 370px;
+                                  --aspect-ratio: 1.405152224824356;
+                                "
+                              >
+                                <img
+                                  class="Image--fadeIn Image--lazyLoaded"
+                                  data-src="include/images/explore/H.jpg"
+                                  alt=""
+                                  src="include/images/explore/H.jpg"
+                                />
+                                <span class="Image__Loader"></span>
+                              </div>
+                              <p class="MegaMenu__PushHeading Heading u-h6">
+                                CHAIR
+                              </p>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="shoplook.html"
