update new changes on header

--- a/oldindex.html
+++ b/oldindex.html
@@ -115,6 +115,43 @@
         </div>
       </nav>
     </header>
+    <div id="shop-detail" class="desktop-content ">
+      <div class="container">
+      <div class="boxDefault-content">
+        <div class="parsys_column-content">
+          <div class="parsys_column">
+            <div id="text" class="text section">
+              <p style="text-align: center;">
+                <a href="/"><b>Living Room Sale – Up to 60% Off</b></a></p> <p style="text-align: center;">
+                  <a href="/">SHOP NOW ›</a>
+              </p>
+            </div>
+          </div> 
+          <div class="parsys_column border-column">
+            <div id="text" class="text section">
+              <p style="text-align: center;">
+                <a href="/"><b>Free Shipping on Fans</b>
+                </a>
+              </p> 
+              <p style="text-align: center;">
+                <a href="/">SHOP NOW ›</a>
+              </p>
+            </div>
+          </div> 
+          <div class="parsys_column">
+            <div id="text" class="text section">
+              <p style="text-align: center;">
+                <a href="/"><b>New Items Added! Up to 75% off Clearance</b></a>
+              </p> 
+              <p style="text-align: center;"><a href="/">SHOP NOW ›</a><br>
+              </p>
+            </div>
+          </div>
+        </div>
+        </div> 
+        </div>
+
+      </div>
 
     <!--============================== Header End ==============================-->
 
