--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +25,17 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap" rel="stylesheet">
     <link
       href="include/css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./include/images/favicon.png" />
     <link href="include/css/style.css" rel="stylesheet" type="text/css" />
     <script
@@ -977,7 +983,10 @@
             data-os-animation="fadeInUp"
             data-os-animation-delay="0.7s"
           >
-          <h2>Shop our family of brands</h2>
+          <div class="heading2">
+            <h2>Shop our family of brands</h2>
+          </div>
+  
           <div class="parsy-column-content">
             <div class="hero-parsy-column">
               <img src="/include/images/explore/001.png" alt="hero2" />
