update the new links

--- a/product-detail.html
+++ b/product-detail.html
@@ -250,7 +250,7 @@
                       <a class="nav-link" href="shoplook.html">Shop the look</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Lifestyle</a>
+                      <a class="nav-link" href="showroom.html">Showroom</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="aboutus.html">About</a>
