update the cart and add sofa detail page

--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                   <div class="top-collect-copy">
                     <h2>Top Collections</h2>
                     <p>Shop our selection of best-sellers now</p>
-                    <a class="btn btn-primary" href="#">Shop All</a>
+                    <a class="btn btn-primary" href="sofa.html">Shop All</a>
                   </div>
                 </div>
                 <div class="collection-slider">
