--- a/sofa-product-detail.html
+++ b/sofa-product-detail.html
@@ -365,35 +365,31 @@
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://www.tikahome.cn/upload/20230710/202307100940364764.jpg "
+                        src="./include/images/product-detail/sofa-pd.jpeg "
                       />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
-                      <img
-                        src="https://www.tikahome.cn/upload/20230710/202307100939254913.jpg"
-                      />
+                      <img src="./include/images/product-detail/sofa-pd1.jpg" />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://www.tikahome.cn/upload/20230710/202307100940364764.jpg "
+                        src="./include/images/product-detail/sofa-pd.jpeg "
                       />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
-                      <img
-                        src="https://www.tikahome.cn/upload/20230710/202307100939269308.jpg"
-                      />
+                      <img src="./include/images/product-detail/sofa-pd1.jpg" />
                     </div>
                   </div>
                   <div>
                     <div class="product-details-item">
                       <img
-                        src="https://www.tikahome.cn/upload/20230710/202307100940364764.jpg "
+                        src="./include/images/product-detail/sofa-pd.jpeg "
                       />
                     </div>
                   </div>
@@ -409,16 +405,13 @@
                   <div class="product-details-text limit-gallery">
                     <h2>DIMENSIONS</h2>
                   </div>
-                  <img
-                    src="https://www.tikahome.cn/upload/202307/07/202307071138101151.jpg"
-                    alt=""
-                  />
+                  <img src="./include/images/product-detail/d-103.jpg" alt="" />
                 </div>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
               <div class="product-details-content quickview-content">
-                <h2>D-104</h2>
+                <h2>D-103</h2>
                 <h2>Sofa</h2>
                 <!-- <div class="product-rating-stock">
                   <div class="product-dec-rating-reviews">
@@ -445,13 +438,25 @@
                 </p>
                 <p class="fz-16">Structure: Solid wood</p>
                 <p class="fz-16">
-                  Seat/Backrest: Solid wood with flexible foam and High-grade
-                  feather
+                  Seat/Backrest: Flexible foam and High-grade feather
                 </p>
 
                 <p class="fz-16">
                   Seat/Backrest finish: Available in a variety of fabrics,
                   microfiber leathers and leathers
+                </p>
+                <p class="fz-16">Base: Die-cast</p>
+                <p class="fz-16">Base finish: Glossy black nickel</p>
+                <p class="fz-16">
+                  Seat cushion and backrest: high quality sponge and down
+                </p>
+                <p class="fz-16">
+                  Optional colors for seat cushions and backrests: various
+                  fabrics, microfiber leather, and genuine leather are available
+                </p>
+                <p class="fz-16">Tripod: metal tripod</p>
+                <p class="fz-16">
+                  Optional colors for tripod: gun black glossy surface
                 </p>
 
                 <div class="pro-details-quality">
