--- a/sofa.html
+++ b/sofa.html
@@ -673,7 +673,7 @@
                                   class="single-grid-product mb-70 mb-md-50 mb-sm-30 mb-xs-30"
                                 >
                                   <div class="product-image">
-                                    <a href="product-detail.html">
+                                    <a href="sofa-product-detail.html">
                                       <img
                                         src="https://www.tikahome.cn/upload/20220919/202209191126102031.jpg"
                                         class="img-fluid"
