--- a/cart.html
+++ b/cart.html
@@ -332,6 +332,50 @@
         </div>
       </div>
       <!--============================== Content End ==============================-->
+      <!--============================== Content Start ==============================-->
+      <div class="content-container">
+        <div class="container">
+          <div
+            class="row os-animation"
+            data-os-animation="fadeInUp"
+            data-os-animation-delay="0.7s"
+          >
+            <div class="cart-item-content border-top border-bottom">
+              <div class="cart-image">
+                <img src="./include/images/product-detail/sofa-pd.jpeg" />
+              </div>
+              <div class="cart-detail">
+                <div class="product-details-content quickview-content d-flex justify-content-between">
+                  <div class="cart-item-name">
+                    <h2>D-104</h2>
+                    <h2>Sofa</h2>
+                  </div>
+                  <div class="cart-item-price">
+                    <p class="product-price product-details-price">
+                      <span class="main-price discounted"
+                        ><del>£723.00</del></span
+                      >
+                      <span class="discounted-price">£672.00</span>
+                    </p>
+                  </div>
+                </div>
+                <p class="fz-16">Structure: Solid wood</p>
+                <p class="fz-16">
+                  Seat/Backrest: Solid wood with flexible foam and High-grade
+                  feather
+                </p>
+
+                <p class="fz-16">
+                  Seat/Backrest finish: Available in a variety of fabrics,
+                  microfiber leathers and leathers
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--============================== Content End ==============================-->
 
       <!--============================== Content Start ==============================-->
       <div class="content-container">
