--- a/product-detail.html
+++ b/product-detail.html
@@ -455,7 +455,7 @@
                 </p>
 
                 <div class="pro-details-quality">
-                  <div class="quantity quantity--2">
+                  <!-- <div class="quantity quantity--2">
                     <input
                       type="text"
                       class="quantity-input"
@@ -465,7 +465,7 @@
                     />
                     <div class="dec qtybutton">-</div>
                     <div class="inc qtybutton">+</div>
-                  </div>
+                  </div> -->
                   <div class="pro-details-cart btn-hover">
                     <a href="cart.html">Add to inquiry</a>
                   </div>
