--- a/sofa-product-detail.html
+++ b/sofa-product-detail.html
@@ -460,7 +460,7 @@
                 </p>
 
                 <div class="pro-details-quality">
-                  <div class="quantity quantity--2">
+                  <!-- <div class="quantity quantity--2">
                     <input
                       type="text"
                       class="quantity-input"
@@ -470,7 +470,7 @@
                     />
                     <div class="dec qtybutton">-</div>
                     <div class="inc qtybutton">+</div>
-                  </div>
+                  </div> -->
                   <div class="pro-details-cart btn-hover">
                     <a href="cart.html">Add to inquiry</a>
                   </div>
