update the font

--- a/cart.html
+++ b/cart.html
@@ -9,12 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -345,7 +340,9 @@
                 <img src="./include/images/product-detail/sofa-pd.jpeg" />
               </div>
               <div class="cart-detail">
-                <div class="product-details-content quickview-content d-flex justify-content-between">
+                <div
+                  class="product-details-content quickview-content d-flex justify-content-between"
+                >
                   <div class="cart-item-name">
                     <h2>D-104</h2>
                     <h2>Sofa</h2>
