--- a/showroom.html
+++ b/showroom.html
@@ -9,22 +9,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     /> -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet"> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600&display=swap"
-      rel="stylesheet"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -155,7 +139,6 @@
                         aria-controls="offcanvasExample"
                         >Product</a
                       >
-                      
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="shoplook.html">Shop the look</a>
@@ -364,12 +347,24 @@
                 <h4>Contact Us</h4>
                 <form action="#">
                   <div class="form-group">
-                    <label for="fullName" >Full Name</label>
-                    <input type="text" id="fullName" name="fullName" placeholder="Full Name" required />
+                    <label for="fullName">Full Name</label>
+                    <input
+                      type="text"
+                      id="fullName"
+                      name="fullName"
+                      placeholder="Full Name"
+                      required
+                    />
                   </div>
                   <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" placeholder="Add Your Mail" id="email" name="email" required />
+                    <input
+                      type="email"
+                      placeholder="Add Your Mail"
+                      id="email"
+                      name="email"
+                      required
+                    />
                   </div>
                   <div class="form-group">
                     <label for="subject">Subject</label>
@@ -388,7 +383,12 @@
                   </div>
                   <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" placeholder="Add Query" required></textarea>
+                    <textarea
+                      id="message"
+                      name="message"
+                      placeholder="Add Query"
+                      required
+                    ></textarea>
                   </div>
                   <div class="form-group file-input-container">
                     <div class="file-input-wrapper">
@@ -577,7 +577,9 @@
               <div class="icons-box">
                 <img src="./include/images/showroom/icon4.webp" />
                 <p>GET IN TOUCH</p>
-                <p>Call us on <a href="tel:(123) 456-7890">(123) 456-7890</a></p>
+                <p>
+                  Call us on <a href="tel:(123) 456-7890">(123) 456-7890</a>
+                </p>
               </div>
             </div>
           </div>
